// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`status loader open 1`] = `
{
  "__typename": "ChecklistOpen",
  "_key": "work-instance_0085a7cf-2b9d-4056-9ac5-a0b581a9b6fa",
  "closedAt": null,
  "dueAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1726886602034.000000",
    "timeZone": "America/Denver",
  },
  "id": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfMDA4NWE3Y2YtMmI5ZC00MDU2LTlhYzUtYTBiNTgx
YTliNmZhOnN0YXR1cw=="
,
  "inProgressAt": null,
  "openedAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1726886602008.000000",
    "timeZone": "America/Denver",
  },
}
`;

exports[`status loader item - open 1`] = `
{
  "__typename": "ChecklistOpen",
  "_key": "14decaa9-cff2-4616-9b75-7938794d2940",
  "closedAt": null,
  "dueAt": null,
  "id": 
"d29ya3Jlc3VsdGluc3RhbmNlOjE0ZGVjYWE5LWNmZjItNDYxNi05Yjc1LTc5Mzg3OTRkMjk0MDpz
dGF0dXM="
,
  "inProgressAt": null,
  "openedAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1726886602008.000000",
    "timeZone": "America/Denver",
  },
}
`;
